<resources>
    <string name="app_name">SoptHub</string>
    <string name="sopthub">SOPTHub</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="done_register">회원가입 완료</string>
    <string name="welcome_id">%s님 환영합니다</string>
    <string name="login_fail">로그인 실패</string>
    <string name="not_all_filled">입력되지 않은 정보가 있습니다</string>
    <string name="wonjoong_profile_picture">WonJoong Profile Picture</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="mbti">MBTI</string>
    <string name="home_follower_list">팔로워 목록</string>
    <string name="home_repo_list">레포지토리 목록</string>
    <string name="item_github_user_image">User Image</string>
    <string name="detail_name_category">이름 :</string>
    <string name="detail_description">상세 소개</string>
    <string name="menu_profile">프로필</string>
    <string name="menu_home">홈</string>
    <string name="menu_camera">카메라</string>
    <string name="home_fragment_github_icon">Github Icon</string>
    <string name="home_fragment_github">Github</string>
    <string name="follow_fragment_in_progress">준비중입니다</string>
    <string name="camera_fragment_gallery_image">gallery image</string>
    <string name="camera_fragment_please_submit">사진을 첨부해주세요</string>
    <string name="camera_fragment_submit">첨부하기</string>
    <string name="Sign_In_Activity_Check_ID_PW_Again">아이디와 비밀번호를 다시 확인해주세요</string>
    <string name="welcome">SOPTHub에 오신걸\n환영합니다!</string>
    <string name="to_next">다음으로</string>
    <string name="have_a_great_time">SOPTHub에서 즐거운 시간\n보내시길 바랍니다!</string>
    <string name="lets_start">시작하기</string>
    <string name="why_dont_we_start_sopt_hub">SOPTHub를\n시작해볼까요?</string>
    <string name="wonjoong_s_image">WonJoong\'s Image</string>
    <string name="github_image">Github Image</string>
    <string name="settings">환경설정</string>
    <string name="auto_login">자동 로그인</string>
</resources>